# socks-to-http-proxy

./: Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  rust.yml
src/: auth.rs  lib.rs  main.rs  main2.rs  main3.rs
src/proxy/: mod.rs
tests/: proxy.rs
