[package]
name = "sthp"
version = "0.4.0"
license = "MIT"
authors = ["Karan Gauswami <karangauswami.dev@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities"]
description = "Convert Socks5 proxy into Http proxy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6", default-features = false }
http = "0.2.9"
hyper = { version = "1.0.0-rc.3", features = ["client","server","http1"] }
clap = { version = "4", features = ["derive"] }
tokio-socks = "0.5"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
bytes = "1.4.0"
http-body-util = "0.1.0-rc.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
