[package]
name = "sthp"
version = "0.5.0-beta2"
license = "MIT"
authors = ["Karan Gauswami <karangauswami.dev@gmail.com>"]
edition = "2021"
categories = ["command-line-utilities"]
description = "Convert Socks5 proxy into Http proxy"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6", default-features = false }
hyper = { version = "1.5", features = ["client","server","http1"] }
clap = { version = "4", features = ["derive"] }
tokio-socks = "0.5"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
bytes = "1.9"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
hyper-util = { version="0.1.10",features = ["tokio"] }
base64 = "0.22.1"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.5.0"

[dev-dependencies]
socksprox = { version = "0.1" }
reqwest = { version = "0.12" }
